aligning footer propositions and correcting icon positions for "services" section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -449,7 +449,7 @@ i.card-UX__customUX {
     width: 4rem;
     height: 4rem;
     border-radius: 16px;
-    padding: 16px 0px 0px 20px;
+    padding: .75rem 0 0 .7rem;
     margin-top: 2.7rem;
     margin-left: 2rem;
 }
@@ -461,7 +461,7 @@ i.card-FrontEnd__customFrontEnd {
     width: 4rem;
     height: 4rem;
     border-radius: 16px;
-    padding: 20px 0px 0px 21px;
+    padding: .7rem 0 0 .75rem;
     margin-left: 2rem;
     margin-top: 2.7rem;
 }
@@ -473,7 +473,7 @@ i.card-BackEnd__customBackEnd {
     width: 4rem;
     height: 4rem;
     border-radius: 16px;
-    padding: 15px 0px 0px 19px;
+    padding: .66rem 0 0 .6rem;
     margin-left: 2rem;
     margin-top: 2.7rem;
 }
@@ -730,8 +730,10 @@ i.card-BackEnd__customBackEnd {
 .footer-container {
     background-color: $bgFooter;
     display: grid;
-    margin: 0;
-    padding: 0;
+    /*   grid-template-columns: 150px;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: column; */
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 }
 
 .footer-nav {
@@ -739,7 +741,7 @@ i.card-BackEnd__customBackEnd {
     grid-row: 1 / 2;
     margin-top: 2rem;
     display: block;
-    margin-left: 2rem;
+    margin-left: 5rem;
     list-style-type: none;
 }
 
@@ -768,7 +770,6 @@ i.card-BackEnd__customBackEnd {
     line-height: 3.3rem;
     color: $gray6;
     margin-top: 3rem;
-    margin-left: 7rem;
 }
 
 .Edie-socialLinks {
@@ -776,7 +777,6 @@ i.card-BackEnd__customBackEnd {
     align-items: center;
     flex-direction: row;
     margin-top: .5rem;
-    margin-left: 7rem;
 }
 
 .Edie-socialLinks__instagram,
@@ -789,6 +789,7 @@ i.card-BackEnd__customBackEnd {
 .contact-request {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
+    margin-left: 0rem;
 }
 
 .contact-request__question {
@@ -800,7 +801,6 @@ i.card-BackEnd__customBackEnd {
     line-height: 1.3rem;
     color: $gray6;
     margin-top: 3rem;
-    margin-left: 14rem;
     margin-bottom: .5rem;
 }
 
@@ -811,7 +811,6 @@ i.card-BackEnd__customBackEnd {
     height: 57px;
     background: $gray6;
     border-radius: 12px;
-    margin-left: 14rem;
     margin-bottom: 12rem;
 }
 
@@ -922,19 +921,20 @@ i.card-BackEnd__customBackEnd {
         width: 290px;
         margin-bottom: 7rem;
         margin-left: .4rem;
+        margin-right: .2em;
     }
     .card-purpose__email-join1--input {
         border: none;
-        width: 290px;
+        max-width: 289px;
         font-size: .9rem;
         line-height: 1rem;
         padding-left: .5rem;
     }
     .card-purpose__email-join1--submit {
-        margin-left: -4.6rem;
+        margin-left: -4.55rem;
         width: 69px;
         height: 40px;
-        font-size: 1.1rem;
+        font-size: .9rem;
         margin-top: 8.8px;
     }
     .card-services-boxes {
@@ -1095,18 +1095,19 @@ i.card-BackEnd__customBackEnd {
         margin-left: 0rem;
     }
     .Edie {
-        margin-left: -5rem;
+        margin-left: -8rem;
     }
-    .contact-request__question {
-        margin-left: 1.2rem;
+    .contact-request {
+        margin-left: -15rem;
     }
     .contact-request__email-join {
-        width: 350px;
-        margin-left: 1rem;
+        width: 340px;
+        margin-right: 1rem;
     }
     .contact-request__email-join--input,
-    .card-purpose__email-join1--input {
+    .card-purpose__email-join1--submit {
         font-size: .9rem;
+        padding-left: .5rem;
     }
 }
 
@@ -1121,6 +1122,9 @@ i.card-BackEnd__customBackEnd {
     }
     .toggle-nav {
         font-size: 1.2rem;
+    }
+    .contact-request {
+        margin-left: -15rem;
     }
     .contact-request__question {
         margin-left: 5.1rem;
